data/derived/sp14/progs/unify/prog0945.ml.out
Characters 94-108:
  | (w,y)::t -> ((w+y)/10)::a::((w+y) mod 10)
                               ^^^^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         int list
